--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,52 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+
+    const some=people.some(function (person) {
+      return person.year<=2003;
+    });
+
+    console.log(some);
     // Array.prototype.every() // is everyone 19 or older?
+
+    const every=people.every ( person => 
+      person.year<=2003
+    );
+
+    console.log(every);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const find=comments.find(comment =>
+      comment.id===823423
+    );
+
+    console.log(find);
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
+
+    const findIndex=comments.findIndex(comment =>
+      comment.id===823423
+    );
+
+    console.log(findIndex);
     // delete the comment with the ID of 823423
+
+    comments.splice(findIndex, 1);
+
+    console.log(comments);
+
+    /* A way to keep the old array and make a new one without ine item
+
+    const newArray=[
+      ...comments.slice(0,findIndex),
+      ...comments.slice(findIndex+1)
+    ]
+
+    console.table(newArray); */
 
   </script>
 </body>
